--- a/agent-installer/Product.wxs
+++ b/agent-installer/Product.wxs
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
-  <Product Id="*" Name="AssetScan Agent" Version="3.0.0" 
-           Manufacturer="AssetScan" UpgradeCode="12345678-ABCD-EFGH-IJKL-987654321000">
+  
+  <Package Name="AssetScan Agent" Manufacturer="AssetScan" Version="3.0.0" UpgradeCode="A1B2C3D4-E5F6-4789-8A9B-CDEF01234567">
     
-    <Package InstallerVersion="500" Compressed="yes" />
     <MediaTemplate EmbedCab="yes" />
     
     <Property Id="SERVER_URL" Value="http://localhost:7474" />
@@ -13,28 +12,17 @@
     <StandardDirectory Id="ProgramFiles64Folder">
       <Directory Id="INSTALLFOLDER" Name="AssetScan">
         
-        <Component Id="AgentExe" Guid="87654321-DCBA-HGFE-LKJI-000123456789">
+        <Component Id="AgentExe" Guid="98765432-10AB-CDEF-0123-456789ABCDEF">
           <File Id="AgentExecutable" Source="..\agent\target\release\assetscan-agent.exe" KeyPath="yes" />
-          
-          <ServiceInstall Id="AgentService" 
-                         Name="AssetScanAgent"
-                         DisplayName="AssetScan Agent v3"
-                         Description="Agente de monitorização de infraestrutura AssetScan."
-                         Type="ownProcess"
-                         Start="auto"
-                         ErrorControl="normal" />
-          
-          <ServiceControl Id="StartAgentService" 
-                          Name="AssetScanAgent" 
-                          Start="install" 
-                          Stop="both" 
-                          Remove="uninstall" 
-                          Wait="yes" />
                           
           <RegistryKey Root="HKLM" Key="Software\AssetScan\Agent">
              <RegistryValue Name="ServerUrl" Type="string" Value="[SERVER_URL]" />
              <RegistryValue Name="ApiKey" Type="string" Value="[API_KEY]" />
              <RegistryValue Name="IntervalMinutes" Type="integer" Value="[INTERVAL]" />
+          </RegistryKey>
+
+          <RegistryKey Root="HKLM" Key="Software\Microsoft\Windows\CurrentVersion\Run">
+             <RegistryValue Name="AssetScanAgent" Type="string" Value="&quot;[#AgentExecutable]&quot;" />
           </RegistryKey>
         </Component>
 
@@ -44,5 +32,6 @@
     <Feature Id="MainFeature" Title="AssetScan Agent" Level="1">
       <ComponentRef Id="AgentExe" />
     </Feature>
-  </Product>
+    
+  </Package>
 </Wix>
